# AnnotatedStreamsUtils

./: .gitignore  Cargo.toml  README.md  base.apptainer  base.singularity  build-singularity.sh  build.apptainer  build.singularity  justfile  prepare-build.sh
analysis/: Manifest.toml  Project.toml  discretize_jet_velocity.jl  lab_presentation.jl  notebook.jl
analysis/src/: analysis.jl  h5_helpers.jl  loaders.jl
src/: animate.rs  binary_to_vtk.rs  cli.rs  config_generator.rs  hdf5_to_vtk.rs  main.rs  prelude.rs  probe.rs  probe_binary.rs  run.rs  spans_to_vtk.rs  utils.rs  vtk_to_mat.rs
src/cases/: mod.rs
src/cases/jet_validation/: mod.rs
src/cases/sbli/: mod.rs
src/run/: container.rs  local.rs  mod.rs
src/sbli/: mod.rs
static/: span_average_input.json
