[package]
name = "streams-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "3.1.0", features = ["derive"] }
derive_more = "0.99.17"
ndarray = "0.15.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
walkdir = "2.3.2"
rayon = "1.5.1"

[dependencies.vtk]
git = "https://github.com/Fluid-Dynamics-Group/vtk"
rev = "2585cefcd688bd200db9bcc9c5a79802e9f3514b"
#branch = "remove-vectorpoints"
#branch = "master"

[dependencies.distribute]
#path = "../distribute"
git = "https://github.com/Fluid-Dynamics-Group/distribute"
branch = "matrix-notify-git"
default-features = false

[dependencies.mat5]
git = "https://github.com/Fluid-Dynamics-Group/mat5"
branch = "master"
