[package]
name = "streams-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.0.0", features = ["derive"] }
derive_more = "0.99.17"
ndarray = "0.15.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
walkdir = "2.3.2"
rayon = "1.5.1"
anyhow = "1.0.65"
xshell = "0.2.2"

[dependencies.vtk]
git = "https://github.com/Fluid-Dynamics-Group/vtk"
rev = "e240643f92d48c123b6ae0bbd62c9b5cfa40c759"

[dependencies.distribute]
#path = "../distribute"
git = "https://github.com/Fluid-Dynamics-Group/distribute"
branch = "matrix-notify-git"
default-features = false

[dependencies.mat5]
git = "https://github.com/Fluid-Dynamics-Group/mat5"
branch = "master"
